[package]
name = "mqtt-to-prom"
version = "0.0.1"
authors = ["swapsCAPS <verstegen.daan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.5.0"
log = "0.4"
pretty_env_logger = "0.3"
prometheus = "0.12.0"
lazy_static = "1.4.0"
